--- a/wiki/TextToElementsProtocol.wiki
+++ b/wiki/TextToElementsProtocol.wiki
@@ -79,7 +79,12 @@ E.g. {{{\[+6\]0}}} (bold cyan on a black background)
 
 === 256-colours ===
 
-See http://www.mudpedia.org/wiki/Xterm_256_colors for exact colour codes.  Note that there are three segments: overlap with the original 16-colours (the only place where true black lies), a central coloured section of 232 colours, a greyscale section of 24 colours.
+See http://www.mudpedia.org/wiki/Xterm_256_colors for exact colour codes.  Note that there are three segments: overlap with the original 16 colours (the only place where true black lies), a central coloured section of 232 colours, a greyscale section of 24 colours.
+
+==== Overlapping Colours ====
+For the overlap with the original 16 colours, use the 16-colour codes above.
+
+==== Central 232 Colours ====
 
   * \<_?R?G?B_
     * _?R_ = a..f: intensity of red value as foreground
@@ -89,11 +94,34 @@ See http://www.mudpedia.org/wiki/Xterm_256_colors for exact colour codes.  Note 
 To match up to the colour chart, the following conversion is applied:
 
 a..f == 0..5
+
 colour = (_?R_ x 36) + (_?G_ x 6) + (_?B_) + 16
 
-E.g. {{{\<fba}}}: (5 x 36) + (1 x 6) + (0) + 16 = colour 202, a deep orange.
+E.g. {{{\<fba}}}: (5 x 36) + (1 x 6) + (0) + 16 = foreground colour 202, a deep orange.
 
   * \>_?R?G?B_
     * _?R_ = a..f: intensity of red value as background
     * _?G_ = a..f: intensity of green value as background
     * _?B_ = a..f: intensity of blue value as background
+
+See above for colour chart meanings.
+
+E.g. {{{\>bdf}}}: (1 x 36) + (3 x 6) + (5) + 16 = background colour  75,  a greeny-blue.
+
+==== Greyscale Colours ====
+
+  * \{_?_
+    * _?_ = a..x: grey intensity as foreground
+
+a..x = 0..23
+
+colour = _?_ + 232
+
+E.g. {{{\{m}}}: = 12 + 232 = colour 244, a medium grey on the foreground.
+
+  * \}_?_
+    * _?_ = a..x: grey intensity as background
+
+See above for colour chart meanings.
+
+E.g. {{{\}x}}}: = 23 + 232 = colour 255, off-white on the background.
