--- a/wiki/TextToElementsProtocol.wiki
+++ b/wiki/TextToElementsProtocol.wiki
@@ -8,10 +8,20 @@ This document describes a method whereby these codes can be placed in-line in te
 
 = Details =
 
+== Escape ==
+  * \\: \
+
 == Default ==
   * \x: set all attributes to their default values
 
 E.g. \x
+
+== Character Code ==
+
+  * \C_???_
+    * _???_ = 000..255: the character to display.
+
+E.g. \C097 = the 'a' character.
 
 == Character Set ==
 
@@ -125,3 +135,7 @@ E.g. {{{\{m}}}: = 12 + 232 = colour 244, a medium grey on the foreground.
 See above for colour chart meanings.
 
 E.g. {{{\}x}}}: = 23 + 232 = colour 255, off-white on the background.
+
+== Examples ==
+
+{{{\[+1\]3\c1\lU\C201}}} = A bright red foreground, yellow background, a double-lined top left corner glyph (╔).
