--- a/wiki/TextToElementsProtocol.wiki
+++ b/wiki/TextToElementsProtocol.wiki
@@ -138,4 +138,4 @@ E.g. {{{\}x}}}: = 23 + 232 = colour 255, off-white on the background.
 
 == Examples ==
 
-{{{\[+1\]3\c1\lU\C201}}} = A bright red foreground, yellow background, a double-lined top left corner glyph (╔).
+{{{\[+1\]3\c1\lU\C201}}} = A bright red foreground, yellow background, double-lined top left corner glyph (╔).
