Edited wiki page TextToElementsProtocol through web user interface.

--- a/wiki/TextToElementsProtocol.wiki
+++ b/wiki/TextToElementsProtocol.wiki
@@ -1,4 +1,4 @@
-#summary Describes a text protocol whereby colour codes, locales, etc.
+#summary Describes a text protocol for colour codes, locales, etc.
 
 = Introduction =
 
