--- a/wiki/PortingNotes.wiki
+++ b/wiki/PortingNotes.wiki
@@ -1,5 +1,5 @@
+#summary Notes on how to reuse Paradice with new projects.
 #labels Phase-Requirements,Featured
-# Notes on how to reuse Paradice with new projects.
 
 = About =
 
