--- a/wiki/DevelopmentRoadmap.wiki
+++ b/wiki/DevelopmentRoadmap.wiki
@@ -16,6 +16,6 @@ Feature requests for Paradice9.
 Incorporate multi-threading capabilities across the application and library.
 
 == Release 2.0 {Paradice} ==
-Provide features that enable Paradice applications to service a larger range of clients.  The two primary features that provide this are terminal type detection (#99) and a user interface that is far less ANSI-heavy, but provides hooks for other markups and protocols that are used by the applications targeted by Paradice (e.g. MSDP, MSSP).
+Provide features that enable Paradice applications to service a larger range of clients.  The two primary features that provide this are terminal type detection (issue 99) and a user interface that is far less ANSI-heavy, but provides hooks for other markups and protocols that are used by the applications targeted by Paradice (e.g. MSDP, MSSP) (issue 100).
 
 The intent of this release is to be able to announce and open the framework to public scrutiny, and possibly add additional development partners. 
