--- a/wiki/HowToBuildParadice9.wiki
+++ b/wiki/HowToBuildParadice9.wiki
@@ -13,18 +13,31 @@
 === Prerequisite Libraries ===
 
   * Boost
+    * TODO
   * Crypto++
+    * TODO
   * CppUnit
+    * TODO
 
 == Unix (including Cygwin) ==
 
 === Prerequisite Tools ===
 
   * g++ compiler
+    * TODO
   * GNU make
-  
+    * TODO  
 === Prerequisite Libraries ===
 
   * Boost
+    * Download and extract the latest Boost distribution from http://boost.org
+    * find and run:
+      * ./bootstrap.sh
+    * In the same directory, run:
+      * ./b2 --toolset=gcc --build-type=complete stage
+      * ./b2 --toolset=gcc --build-type=complete install
+    * Note: if you do not have control over the /usr/local directory, then you may need to add "--prefix=$HOME/boost" or similar to those lines.
   * Crypto++
+    * TODO
   * CppUnit
+    * TODO
