--- a/wiki/DevelopmentRoadmap.wiki
+++ b/wiki/DevelopmentRoadmap.wiki
@@ -15,6 +15,9 @@ Feature requests for Paradice9, with Issue 107 (Encounter Control) currently hav
 == Release 1.4 {Paradice} ==
 Incorporate multi-threading capabilities across the application and library.
 
+== Release 1.6 {Application} ==
+Addition of the 'Room' concept to allow multiple gaming sessions.
+
 == Release 2.0 {Paradice} ==
 Provide features that enable Paradice applications to service a larger range of clients.  The two primary features that provide this are terminal type detection (issue 99) and a user interface that is far less ANSI-heavy, but provides hooks for other markups and protocols that are used by the applications targeted by Paradice (e.g. [http://tintin.sourceforge.net/msdp/ MSDP], [http://tintin.sourceforge.net/mssp/ MSSP]) (issue 100).  Could also include [http://www.aardwolf.com/wiki/index.php/Clients/GMCP GMCP]/[http://www.ironrealms.com/rapture/manual/files/FeatATCP-txt.html ATCP] and Aardwolf's [http://www.aardwolf.com/blog/2008/07/10/telnet-negotiation-control-mud-client-interaction/ "Protocol 102"]
 
