--- a/wiki/FutureBibliography.wiki
+++ b/wiki/FutureBibliography.wiki
@@ -1,5 +1,5 @@
 #summary Interesting sites or posts that may contribute
 
-== Dynamic Descriptions ==
+== KaVir on Dynamic Descriptions ==
 
-* [http://www.mudbytes.net/index.php?a=topic&t=2164&p=35938#p35938 KaVir on Dynamic Descriptions]
+* http://www.mudbytes.net/index.php?a=topic&t=2164&p=35938#p35938
