--- a/wiki/DevelopmentRoadmap.wiki
+++ b/wiki/DevelopmentRoadmap.wiki
@@ -2,23 +2,28 @@
 #labels Featured,Phase-Requirements
 
 = About =
-This page describes the release targets and the purpose of each.  Additionally, in brackets you can find the primary target of the release (e.g. Application is for the Paradice9 application, whereas Paradice is for the underlying framework,) and also the status of the release.
+This page describes the release targets and the purpose of each.  Additionally, in brackets you can find the primary target of the release (e.g. Application is for the Paradice9 application, Paradice is for the underlying framework, Bug Fix Release is for the odd-numbered releases between feature releases) and also whether the scheduled release has been completed or are in progress.
 
-Releases follow a Features/Fixes cycle.  Implicit between the evenly-numbered releases is an odd numbered release that contains bugfixes for the preceding release.
+== Release 1.0 {Paradice + Application/Complete 2nd December 2010} ==
+Initial release of Paradice9 with the Munin user interface.  The Munin User Interface, which was tracked by Issue #29, is the primary feature for Paradice.  It is a component-based user interface that renders the screen a user sees server side and then makes use of ANSI control codes to send the changes to the client.  This technology enables a much higher degree of control over the presentation than the usual line-mode style of this kind of application.
 
-== Release 1.0 {Application/Complete} ==
-Initial release of Paradice9 with the Munin user interface.
+== Release 1.1 {Bug Fix Release/Complete 3rd October 2011} ==
+This release saw a large stabilisation effort as regular usage of the application showed opportunities for all kinds of improvements.
 
 == Release 1.2 {Application/In Progress} ==
-Feature requests for Paradice9, with Issue 107 (Encounter Control) currently having the limelight.
+Feature requests for Paradice9, with Issue #107 (Encounter Control) being the primary feature for the release.
+
+== Release 1.3 {Bug Fix Release} ==
+Two performance-related issues are scheduled here.  The first is an effort to reduce the number of memory allocations, since profiling has revealed that allocations and deallocations are the largest consumers of processing time during the application's life.  This is tracked in Issue 115.  The second ticket is for other performance considerations.  In particular, usage of Valgrind has yielded some interesting performance hotspots that can be quickly cleaned up.  This is tracked in Issue #121.
 
 == Release 1.4 {Paradice} ==
-Incorporate multi-threading capabilities across the application and library.
+Incorporate multi-threading capabilities across the application and library.  This is tracked in Issue #67.
 
 == Release 1.6 {Application} ==
-Addition of the 'Room' concept to allow multiple gaming sessions.
+Addition of the 'Room' concept to allow multiple gaming sessions.  This is tracked in Issue #123.
 
 == Release 2.0 {Paradice} ==
-Provide features that enable Paradice applications to service a larger range of clients.  The two primary features that provide this are terminal type detection (issue 99) and a user interface that is far less ANSI-heavy, but provides hooks for other markups and protocols that are used by the applications targeted by Paradice (e.g. [http://tintin.sourceforge.net/msdp/ MSDP], [http://tintin.sourceforge.net/mssp/ MSSP]) (issue 100).  Could also include [http://www.aardwolf.com/wiki/index.php/Clients/GMCP GMCP]/[http://www.ironrealms.com/rapture/manual/files/FeatATCP-txt.html ATCP] and Aardwolf's [http://www.aardwolf.com/blog/2008/07/10/telnet-negotiation-control-mud-client-interaction/ "Protocol 102"]
+Provide features that enable Paradice applications to service a larger range of clients.  Issue #99 tracks a feature to provide terminal type detection.  Issue #100 tracks a feature to provide a user interface that is far less ANSI-heavy, but provides hooks for other markups and protocols that are used by the applications targeted by Paradice (e.g. [http://tintin.sourceforge.net/msdp/ MSDP], [http://tintin.sourceforge.net/mssp/ MSSP]).  Could also include [http://www.aardwolf.com/wiki/index.php/Clients/GMCP GMCP]/[http://www.ironrealms.com/rapture/manual/files/FeatATCP-txt.html ATCP] and Aardwolf's [http://www.aardwolf.com/blog/2008/07/10/telnet-negotiation-control-mud-client-interaction/ "Protocol 102"].
 
-The intent of this release is to be able to announce and open the framework to public scrutiny, and possibly add additional development partners. 
+== Future ==
+After the release of Paradice v2.0, the intent is to announce and open the framework to public scrutiny, possibly add additional development partners, and to branch out into new applications for Paradice.
