Edited wiki page Bibliography through web user interface.

--- a/wiki/Bibliography.wiki
+++ b/wiki/Bibliography.wiki
@@ -7,3 +7,8 @@ http://invisible-island.net/xterm/ctlseqs/ctlseqs.html
 = Donky's Character Set Investigation =
 
 http://www.mudbytes.net/index.php?a=topic&t=2618&min=0&num=15
+
+= Mudpedia's Color Articles =
+
+http://www.mudpedia.org/mediawiki/index.php/ANSI_colors
+http://www.mudpedia.org/mediawiki/index.php/Xterm_256_colors
